--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-  "version": 2,
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/index.py"
-    }
-  ],
-  "functions": {
-    "api/index.py": {
-      "memory": 2048,
-      "maxDuration": 10
-    }
-  }
+  "version": 2
 }
